--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,165 @@
     border-bottom-right-radius: 20px;
     background-color: #D9D9D9;
 }
+#screenDiv{
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 500px;
+}
+#titleImagePokemon{
+    user-select: none;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+.pokemonButtons{
+    display: flex;
+    width: 100%;
+    height: 125px;
+}
+#pokemonButtonsTop{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#pokemonButtonsTopContent{
+    display: flex;
+    justify-content: space-between;
+    width: 13.5%;
+}
+#pokemonButtonsLow{
+
+}
+.pokedexCircle{
+    border-radius: 50%;
+    background-color: #F4395B;
+    border: 2px solid #000;
+}
+.circleLow{
+    width: 35px;
+    height: 35px;
+}
+
+.start{
+    background-image: url("https://i.ibb.co/5x5dDyy/background-pokemon-emerald.png");
+}
+@font-face {
+    font-family: pokemonFont;
+    src: url(https://filedropper.com/d/s/download/pIwnpu5cyPFysZgQkn8d35slMYo1Vv);
+}
+.TextPokemon{
+    font-family: pokemonFont;
+}
+.contentDivCenterHorizontal{
+    display: flex;
+    justify-content: center;
+}
+#startText{
+    display: block;
+    font-family: pokemonFont;
+    font-size: 40px;
+    text-align: center;
+    color: #fff;
+}
+#StartDiv{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 150px;
+}
+#startImage{
+    margin-top: 20px;
+}
+#startImage:hover{
+    background-color: black;
+    border-radius: 50%;
+}
+.pokedex{
+    background-color:#ffffff;
+    /*
+    display:flex;
+    justify-content: center;
+    align-items:center;
+    width: 900px;
+    flex-wrap: wrap;*/
+}
+#pokedexList {
+    display: flex;
+    margin:0 auto;
+    width: 900px;
+    height: 330px;
+    flex-wrap: wrap;
+}
+.ImagePokemonPokedex{
+    display: block;
+    margin: 0 auto;
+    margin-top: 5px;
+    user-select: none;
+    cursor: pointer;
+}
+.boxNamePokemonPokedex{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    margin-top: auto;
+    width: 100%;
+    text-align: center;
+    font-family: pokemonFont;
+    color: #fff;
+    margin-top: 8px;
+}
+.pokemonPokedex {
+    width: 200px;
+    height: 160px;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-left: 20px;
+    margin-top:5px;
+}
+#titlePokedex {
+    display:block;
+    text-align:center;
+    font-family: pokemonFont;
+    font-size: 35px;
+    padding-bottom: 20px;
+    margin-top: 30px;
+}
+#backpage{
+    position: absolute;
+    cursor: pointer;
+    top: 10px;
+    left: 5px;
+}
+.pageChangePokedex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 40px;
+    width: 70px;
+    background-color: #D9D9D9;
+    font-family: pokemonFont;
+    color: #000000;
+    border-radius: 17px;
+    font-size: 20px;
+    cursor: pointer;
+}
+#pagesListPokedex :not(:first-child){
+    margin-left: 20px;
+}
+#pagesListPokedex{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 790px;
+    height: 60px;
+}
+#screen{
+    width: 1000px;
+    height: 100%;
+    border: 10px solid #000000;
+    border-radius: 15px;
+    position: relative;
+}
