--- a/front_end/src/screens/home/Start/index.module.css
+++ b/front_end/src/screens/home/Start/index.module.css
@@ -1,6 +1,6 @@
 #startText{
   display: block;
-  font-family: pokemonFont;
+  font-family: PokemonFont;
   font-size: 40px;
   text-align: center;
   color: #fff;
