--- a/front_end/src/screens/pokemon/index.module.css
+++ b/front_end/src/screens/pokemon/index.module.css
@@ -4,4 +4,15 @@
   margin-top: 30px;
   height: 50px;
   width: 50px;
+  z-index: 10;
+}
+.PokemonScreen{
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 100% 100%;
+}
+.pokemonCenter{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
